# python-ci-cd

./: .drone.yml  .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
fizzbuzz/: __init__.py  fizzbuzz.py
tests/: test_fizzbuzz.py
