[tool.poetry]
name = "python-ci-cd"
version = "0.1.0"
description = ""
authors = ["Valentin Khomutenko <valentine.khomutenko@gmail.com>"]
packages = [
    { include = "fizzbuzz" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
